yaml/was.yaml
apiVersion: v1
kind: Service
metadata:
  name: was-svc
spec:
  selector:
    app: was
  ports:
  - port: 8080
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was
spec:
  selector:
    matchLabels:
      app: was
  template:
    metadata:
      labels:
        app: was
    spec:
      containers:
      - name: was
        image: cicd-image
