yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:865577889736:certificate/090b8a4b-9672-473d-ae25-d34002a8ef95
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  # tls:
  #   - hosts:
  #       - www.frodo.co.kr
  #     secretName: tls-crt 
  ingressClassName: alb
  rules:
  - host: www.frodo.co.kr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myweb
            port: 
              number: 80
